--- a/ConsoleAppNETCore/ConsoleAppNETCore.csproj
+++ b/ConsoleAppNETCore/ConsoleAppNETCore.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SharedLibraryNETStandard\SharedLibraryNETStandard.csproj" />
   </ItemGroup>
 
