--- a/ConsoleAppNETCore/appsettings.json
+++ b/ConsoleAppNETCore/appsettings.json
@@ -2,5 +2,12 @@
   "User": {
     "FirstName": "Test",
     "LastName": "User"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   }
 }
